--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="images/nishit_edit.jpg" href="/src/images/nishit_bg.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="AI-powered career advisor for Indian students. Get personalized career recommendations, skill gap analysis, and learning roadmaps powered by Google Cloud Vertex AI." />
     <meta name="keywords" content="career advisor, AI career guidance, Indian students, skill development, career recommendations, Google Cloud, Vertex AI" />
